--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_component.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_component.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2015-01-12T10:39:09Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2015-01-19T10:54:04Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -53,6 +53,9 @@
 			</trans-unit>
 			<trans-unit id="colors.description">
 				<source>colors</source>
+			</trans-unit>
+			<trans-unit id="attributes.description">
+				<source>attributes</source>
 			</trans-unit>
 		</body>
 	</file>
